--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <span>
-            <h1>Bonjour</h1>
+            <h1>Bonjour tout le monde!</h1>
         </span>
     </body>
 </html>
