--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
                 display: flex;
                 justify-content: center;
                 font-family: arial;
-                color: blue;
+                color: orange;
             }
         </style>
     </head>
     <body>
         <span>
             <h1>Bonjour tout le monde!</h1>
+            <h2>Halloween</h2>
         </span>
     </body>
 </html>
