Add flex-direction to span style

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
             span{
                 display: flex;
                 justify-content: center;
+                flex-direction: column;
                 font-family: arial;
                 color: orange;
             }
