--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <span>
             <h1>Bonjour tout le monde!</h1>
             <h2>Halloween</h2>
+            <img src="https://png.pngtree.com/png-vector/20231023/ourmid/pngtree-funny-pumpkin-character-with-a-surprised-grimace-halloween-png-image_10318593.png" alt="C'est l'Halloween">
         </span>
     </body>
 </html>
