--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Léo Proulx</title>
-        <style>
-            span{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                flex-direction: column;
-                font-family: arial;
-                color: orange;
-            }
-        </style>
-    </head>
-    <body>
-        <span>
-            <h1>Bonjour tout le monde!</h1>
-            <h2>Halloween</h2>
-            <img src="https://png.pngtree.com/png-vector/20231023/ourmid/pngtree-funny-pumpkin-character-with-a-surprised-grimace-halloween-png-image_10318593.png" alt="C'est l'Halloween">
-        </span>
-    </body>
+  <head>
+    <title>Léo Proulx</title>
+    <style>
+      span {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        font-family: arial;
+        color: orange;
+      }
+    </style>
+  </head>
+  <body>
+    <span>
+      <h1>Bonjour tout le monde!</h1>
+      <h2>Halloween</h2>
+      <img
+        src="https://png.pngtree.com/png-vector/20231023/ourmid/pngtree-funny-pumpkin-character-with-a-surprised-grimace-halloween-png-image_10318593.png"
+        alt="C'est l'Halloween"
+      />
+      <h3>Je n'accepte pas les excuses de M. Jarry</h3>
+    </span>
+  </body>
 </html>
