--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         src="https://png.pngtree.com/png-vector/20231023/ourmid/pngtree-funny-pumpkin-character-with-a-surprised-grimace-halloween-png-image_10318593.png"
         alt="C'est l'Halloween"
       />
-      <h3>Je n'accepte pas les excuses de M. Jarry</h3>
+      <a href="https://minefunny.fun">Mine Funny</a>
     </span>
   </body>
 </html>
