Change theme from Halloween to Christmas

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
         align-items: center;
         flex-direction: column;
         font-family: arial;
-        color: orange;
+        color: red;
       }
     </style>
   </head>
   <body>
     <span>
       <h1>Bonjour tout le monde!</h1>
-      <h2>Halloween</h2>
+      <h2>Noël</h2>
       <img
-        src="https://png.pngtree.com/png-vector/20231023/ourmid/pngtree-funny-pumpkin-character-with-a-surprised-grimace-halloween-png-image_10318593.png"
-        alt="C'est l'Halloween"
+        src="https://nicolet.ca/upload/nouvelles/276-age-ou-l-enfant-croit-au-pere-noel.jpg"
+        alt="C'est Noël"
       />
       <a href="https://opinel.club">Mine Funny</a>
     </span>
